--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -8,6 +8,12 @@
 
  .home{
      flex-direction: column;
+     margin: 18% 2% 2% 2%;
+ }
+
+ .home > .form-container{
+
+    margin: 0% 2% 2% 2%;
  }
 }
 
